cmake_minimum_required(VERSION 3.12)
project(c_samples C)

set(CMAKE_C_STANDARD 99)

add_subdirectory(sample1)
add_subdirectory(sample2)
add_subdirectory(sample3)
add_subdirectory(sample4)
add_subdirectory(sample5)
add_subdirectory(sample6)
add_subdirectory(sample7)
add_subdirectory(sample8)
add_subdirectory(sample9)
add_subdirectory(sample10)
add_subdirectory(sample11)
add_subdirectory(sample12)
add_subdirectory(sample13)
add_subdirectory(sample14)
